# agent-first-ui

./: README.md  spore.core.json
docs/: composition.md  host-renderer-contract.md  overview.md  producer-guide.md
examples/: README.md  go_game.afui.json  operator_console.afui.json  tui_ops.afui.json
rust/: Cargo.toml  LICENSE  README.md  clippy.toml
rust/src/: action.rs  binding.rs  error.rs  host.rs  lib.rs  patch.rs  report.rs  runtime.rs  types.rs  validation.rs
rust/tests/: fixtures.rs
skills/: agent-first-ui.md
spec/: afui.schema.json  agent-first-ui.md
spec/fixtures/: admin.afui.json  admin.afui.patch.json  hud.afui.json  image_editor.afui.json  tendril.afui.document.patch.json  tendril.afui.json  tendril.afui.jsonl
