[package]
name = "agent-first-ui"
version = "0.1.0"
edition = "2021"
description = "A UI protocol that lets a tool describe its interface as data instead of code — so a trusted host you own renders the screens and actions, and nothing the tool sends can run on your machine."
license = "MIT"
repository = "https://github.com/agentfirstkit/agent-first-ui"
readme = "README.md"
# The SDK package is intentionally data/protocol only. Repository-level AFUI
# specs and fixtures live one directory up; local tests reference them there.
include = [
    "src/**",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "clippy.toml",
]

[features]
default = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
